--- a/HTML5_e_CSS3/aula06_todos_elementos_HTML.html
+++ b/HTML5_e_CSS3/aula06_todos_elementos_HTML.html
@@ -1,3 +1,3 @@
-<!-- link com todos os elementos do HTML
+<!-- link com os elementos do HTML
  https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element
  -->
