--- a/07_Django/Django_aula/base/global/base.html
+++ b/07_Django/Django_aula/base/global/base.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BASE</title>
-</head>
-<body>
-    <h1>{% block texto %} BASE {% endblock texto %}</h1>
+{% include 'global/partials/head.html' %}
+
+<h1>{% block texto %} BASE {% endblock texto %}</h1>
+
 </body>
 </html>
