--- a/07_Django/Django_aula/base/global/base.html
+++ b/07_Django/Django_aula/base/global/base.html
@@ -1,6 +1,11 @@
 {% include 'global/partials/head.html' %}
+{% include 'global/partials/menu.html' %}
 
-<h1>{% block texto %} BASE {% endblock texto %}</h1>
+<h1>{% block texto %} {% endblock texto %}</h1>
+
+<main class="content">
+    {% block posts %}  {% endblock posts %}
+</main>
 
 </body>
 </html>
